[gd_scene load_steps=2 format=3 uid="uid://1b8ty1dlpxmq"]

[ext_resource type="Script" path="res://LobbyMenu.gd" id="1_mkugc"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mkugc")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Username" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Server IP"

[node name="ServerIp" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="JoinServer" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Join Server"

[node name="CreateServer" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Dedicated Server"

[node name="PlayerList" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinServer" to="." method="_on_join_server_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreateServer" to="." method="_on_create_server_pressed"]
